# KLauncher

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  package.json
.github/: dependabot.yml
.github/workflows/: rust.yml  windows.yml
src/: downloader.rs  engine.rs  error.rs  gameloader.rs  gui.rs  installer.rs  jenkins.rs  jre.rs  log.json  main.rs  osspec.rs  settings.rs  test.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account.rs  error.rs  gameloader.rs  installer.rs  kconfig.rs  main.rs  osspec.rs  profile.rs  test.rs  utils.rs
