[package]
name = "klauncher"
version = "0.1.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@kingtux.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
discord-rpc-client = "0.3.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
jenkins_api = "0.8.0"
indicatif = "0.16.2"
zip = "0.5"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "tlhelp32", "processthreadsapi", "synchapi", "impl-default"] }