[package]
name = "klauncher"
version = "0.1.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@kingtux.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
discord-rpc-client = "0.3.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.19"
jenkins_api = "0.8.0"
indicatif = "0.17.1"
zip = "0.6.2"
thiserror = "1"
nitro_log = { git = "https://github.com/wyatt-herkamp/nitro_log" }
log = "0.4.17"
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "tlhelp32", "processthreadsapi", "synchapi", "impl-default"] }