[package]
name = "k-launcher"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "k-launcher"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
clap = "2.33.3"
serde_yaml = "0.8"
discord-rpc-client = "0.3.0"
reqwest = { version = "0.11", features = [ "json" ] }
tokio = { version = "1", features = [ "full" ] }
futures = "0.3"
jenkins_api = "0.8.0"
indicatif = "0.15.0"
zip = "0.5"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = [
  "winuser",
  "tlhelp32",
  "processthreadsapi",
  "synchapi",
  "impl-default"
] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "k-launcher"
path = "src/main.rs"
